--- a/Style.css
+++ b/Style.css
@@ -184,6 +184,9 @@ p {
   letter-spacing: 6px;
   color: #000046;
 }
+h3 {
+  font-family: "Snell Roundhand", cursive;
+}
 h4{
   
   font-size: 15px;
